Fixed spacing after logo in Navbar

--- a/client/src/Navbar.css
+++ b/client/src/Navbar.css
@@ -38,7 +38,7 @@
 .logo{
   width:53px;
   height:53px;
-  margin-right: -475px;
+  margin-right: -690px;
 }
 
 
